--- a/Code/src/style.css
+++ b/Code/src/style.css
@@ -1,42 +1,119 @@
+/* INICIO LOGIN*/
+* {
+    padding: 1%;
+}
+
+html {
+    min-height: 100%;
+}
+
 body {
-    font-family: Arial, sans-serif;
-    margin: 0;
-    padding: 0;
-    background-color: #f4f4f4;
+    background-repeat: no-repeat;
+    background-image: linear-gradient(to right top, #051937, #004d7a, #008793, #00bf72, #a8eb12);
 }
-.container {
-    width: 80%;
-    margin: auto;
-    padding: 20px;
-    background-color: #fff;
-    border-radius: 5px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+
+p,
+h1,
+h2,
+h3,
+label {
+    color: white;
 }
-h2 {
+
+.logo {
+    padding: 0%;
+    display: flex;
+    justify-content: center;
+}
+
+#logo {
+    width: 20%;
+}
+
+.textoPrincipal {
     text-align: center;
 }
+
+.formularios {
+    width: 30%;
+    margin: auto;
+}
+
+.botoes {
+    margin-left: auto;
+    text-align: center;
+}
+
+#Login,
+#CriarConta {
+    display: none;
+}
+
+.has-error {
+
+    color: red;
+    text-shadow: black;
+
+}
+
+/*FIM LOGIN*/
+
+/* INICIO LOGIN*/
+* {
+    padding: 1%;
+}
+
+html {
+    min-height: 100%;
+}
+
+body {
+    background-repeat: no-repeat;
+    background-image: linear-gradient(to right top, #051937, #004d7a, #008793, #00bf72, #a8eb12);
+}
+
+p,
+h1,
+h2,
+h3,
 label {
-    display: block;
-    margin-bottom: 5px;
+    color: white;
 }
-input[type="text"],
-input[type="email"],
-input[type="password"] {
-    width: 100%;
-    padding: 10px;
-    margin-bottom: 10px;
-    border: 1px solid #ccc;
-    border-radius: 5px;
+
+.logo {
+    padding: 0%;
+    display: flex;
+    justify-content: center;
 }
-input[type="submit"] {
-    width: 100%;
-    padding: 10px;
-    border: none;
-    border-radius: 5px;
-    background-color: #007bff;
-    color: #fff;
-    cursor: pointer;
+
+#logo {
+    width: 20%;
 }
-input[type="submit"]:hover {
-    background-color: #0056b3;
+
+.textoPrincipal {
+    text-align: center;
 }
+
+.formularios {
+    width: 30%;
+    margin: auto;
+}
+
+.botoes {
+    margin-left: auto;
+    text-align: center;
+}
+
+#Login,
+#CriarConta {
+    display: none;
+}
+
+.has-error {
+
+    color: red;
+    text-shadow: black;
+
+}
+
+/*FIM LOGIN*/
